--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -334,7 +334,6 @@
             </div>
         </section>
 
-
         <section id="pricing" >
             <div class="container">
                 <div class="row justify-content-center">
@@ -342,12 +341,12 @@
                         <div class="col-lg-12 text-center">
                             <h1 class="display-4">Pricing</h1>
                             <p id="pricing-lead" class="lead">
-                                Time To Teach has simple pricing
+                                Time To Teach has simple pricing.
                             </p>
 
                             <div class="row justify-content-center">
-                                <div class="col-lg-10">
-                                    <div class="card-group">
+                                <div class="col-lg-12">
+                                    <div class="card-deck">
 
                                         <div class="card">
                                             <div class="card-block ">
@@ -387,8 +386,10 @@
                                             </div>
                                             <div class="card-block">
                                                 <p class="card-text">
-                                                    <span class="display-4">£2.50</span>/month
+                                                    <span class="display-4">£3</span>/month
                                                 </p>
+
+                                                <p>Same as free plus ...</p>
 
                                                 <div class="text-left">
                                                     <ul class="list-unstyled">
