--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -96,40 +96,9 @@ img {
     background-color: ghostwhite;
 }
 
-#pricing .feature-content {
-    width: 100%;
-    padding-top: 7rem;
-}
-
-#pricing h1 {
-    padding-top: 3rem;
-}
-
-#pricing p.lead {
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-    margin-bottom: 2rem;
-}
-
 #pricing .card-title {
     margin-top: 1rem;
     margin-bottom: 1.5rem;
-}
-
-#pricing .card-text {
-    padding: 1rem 0;
-}
-
-#pricing .btn {
-    margin: 2rem 0;
-}
-
-#pricing .card {
-    padding-bottom: 0;
-}
-
-#pricing .card-block {
-    padding-bottom: 0;
 }
 
 .check-icon {
@@ -167,6 +136,40 @@ img {
 
 #main-footer a {
     color: #6C6F73;
+}
+
+@media screen and ( min-width: 700px){
+    #pricing .feature-content {
+    width: 100%;
+    padding-top: 7rem;
+    }
+
+    #pricing h1 {
+    padding-top: 3rem;
+    }
+
+    #pricing p.lead {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    margin-bottom: 2rem;
+    }
+
+
+    #pricing .card-text {
+    padding: 1rem 0;
+    }
+
+    #pricing .btn {
+    margin: 2rem 0;
+    }
+
+    #pricing .card {
+    padding-bottom: 0;
+    }
+
+    #pricing .card-block {
+    padding-bottom: 0;
+    }
 }
 
 @media screen and ( min-width: 991px) {
