--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -336,111 +336,104 @@
 
         <section id="pricing" >
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="feature-content ">
-                        <div class="col-lg-12 text-center">
-                            <h1 class="display-4">Pricing</h1>
-                            <p id="pricing-lead" class="lead">
-                                Time To Teach has simple pricing.
-                            </p>
+                <div class="feature-content ">
+                    <div class="text-center">
+                        <h1 class="display-4">Pricing</h1>
+                        <p class="lead">
+                            Time To Teach has simple pricing
+                        </p>
+                        <div class="card-deck">
+                            <div class="card">
+                                <div class="card-body ">
+                                    <h4 class="card-title">Free</h4>
+                                    <hr align="center" width="50%">
+                                    <h6 class="card-subtitle">No cost forever and ever!</h6>
 
-                            <div class="row justify-content-center">
-                                <div class="col-lg-12">
-                                    <div class="card-deck">
+                                    <p class="card-text">
+                                        <span class="display-4">£0</span>/month
+                                    </p>
 
-                                        <div class="card">
-                                            <div class="card-block ">
-                                                <h4 class="card-title">Free</h4>
-                                                <hr align="center" width="50%">
-                                                <h6 class="subtitle">No cost forever and ever!</h6>
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    <span class="display-4">£0</span>/month
-                                                </p>
+                                    <p>Access to the community and many resources. Ideal for trying out.</p>
 
-                                                <div class="text-left">
-                                                    <ul class="list-unstyled">
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Some cool feature one</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Another thing that is great</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Don't forget this too</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Finally this comes free as well</li>
-                                                    </ul>
-                                                </div>
-
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    Sign Up
-                                                </button>
-                                            </div>
-                                        </div>
-
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <h4 class="card-title">Standard</h4>
-                                                <hr align="center" width="50%">
-                                                <h6 class="subtitle">Support card subtitle</h6>
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    <span class="display-4">£3</span>/month
-                                                </p>
-
-                                                <p>Same as free plus ...</p>
-
-                                                <div class="text-left">
-                                                    <ul class="list-unstyled">
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Some cool feature one</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Another thing that is great</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Don't forget this too</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Finally this comes free as well</li>
-                                                    </ul>
-                                                </div>
-
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    Sign Up
-                                                </button>
-                                            </div>
-                                        </div>
-
-                                        <div class="card">
-                                            <div class="card-block">
-                                                <h4 class="card-title">Premium</h4>
-                                                <hr align="center" width="50%">
-                                                <h6 class="subtitle">Support card subtitle</h6>
-                                            </div>
-                                            <div class="card-block">
-                                                <p class="card-text">
-                                                    <span class="display-4">£5</span>/month
-                                                </p>
-
-                                                <div class="text-left">
-                                                    <ul class="list-unstyled">
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Some cool feature one</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Another thing that is great</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Don't forget this too</li>
-                                                        <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
-                                                            Finally this comes free as well</li>
-                                                    </ul>
-                                                </div>
-
-                                                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">
-                                                    Sign Up
-                                                </button>
-                                            </div>
-                                        </div>
+                                    <div class="text-left">
+                                        <ul class="list-unstyled">
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Some cool feature one</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Another thing that is great</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Don't forget this too</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Finally this comes free as well</li>
+                                        </ul>
                                     </div>
                                 </div>
+
+                                <button type="button" class="btn btn-outline-success pricing-btn" data-toggle="modal" data-target="#myModal">
+                                    Sign Up
+                                </button>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="card-title">Standard</h4>
+                                    <hr align="center" width="50%">
+                                    <h6 class="card-subtitle">Easy planning and management of lessons.</h6>
+
+                                    <p class="card-text">
+                                        <span class="display-4">£3</span>/month
+                                    </p>
+
+                                    <p>A big step forward to efficiency for busy teachers.</p>
+
+                                    <div class="text-left">
+                                        <ul class="list-unstyled">
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Some cool feature one</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Another thing that is great</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Don't forget this too</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Finally this comes free as well</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <button type="button" class="btn btn-outline-success align-bottom pricing-btn" data-toggle="modal" data-target="#myModal">
+                                    Sign Up
+                                </button>
+
+                            </div>
+
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="card-title">Premium</h4>
+                                    <hr align="center" width="50%">
+                                    <h6 class="card-subtitle">Full integration with your country's curriculum.</h6>
+                                    <p class="card-text">
+                                        <span class="display-4">£5</span>/month
+                                    </p>
+
+                                    <p>Currently only available in Scotland <img src="@routes.Assets.versioned("icons/flags/scotlandFlag.png")" alt="Scotland Flag" height="16px"></p>
+
+                                    <div class="text-left">
+                                        <ul class="list-unstyled">
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Some cool feature one</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Another thing that is great</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Don't forget this too</li>
+                                            <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                Finally this comes free as well</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <button type="button" class="btn btn-outline-success pricing-btn" data-toggle="modal" data-target="#myModal">
+                                    Sign Up
+                                </button>
                             </div>
                         </div>
                     </div>
