--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -1,8 +1,3 @@
-/*@import "common.css";*/
-
-/*@import "defaultGrid.css";*/
-/*@import "timetable-grid.css";*/
-
 html, body {
     height: 100%;
 }
@@ -13,7 +8,7 @@ body {
     color: #6c6f73
 }
 
-h1,h2,h3,h4,h5 {
+h1, h2, h3, h4, h5 {
     color: #333;
 }
 
@@ -55,7 +50,7 @@ img {
     max-width: 60rem;
     margin: 0 auto;
     text-align: center;
-    background: rgba(0,0,0, 0.3);
+    background: rgba(0, 0, 0, 0.3);
     padding: 2rem;
 }
 
@@ -96,23 +91,51 @@ img {
     background-color: ghostwhite;
 }
 
-#pricing .card-title {
+card-deck {
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    align-items: stretch;
+}
+
+.card-deck .card {
+    display: block;
+    /*flex-basis: 33.3%; !* change this value for each breakpoint*!*/
+}
+
+
+
+
+.pricing-btn {
+    width: 50%;
+    margin-bottom: 2rem;
+    align-self: center;
+}
+
+#pricing .lead {
+    margin-top: 1.5rem;
+}
+
+#pricing .card-deck {
+    margin-top: 4rem;
+}
+
+#pricing ul {
+    margin-top: 2rem;
+}
+
+#pricing li {
+    margin: 0.25rem 0;
+}
+
+#pricing .check-icon {
+    margin-left: 0.25rem;
+    margin-right: 0.5rem;
+}
+
+.card-subtitle {
     margin-top: 1rem;
     margin-bottom: 1.5rem;
-}
-
-.check-icon {
-    color: yellow;
-    padding: 0 1rem;
-}
-
-.card-group li {
-    margin: 0.5em 0;
-    width: 100%;
-}
-
-.card {
-    width: 100%;
 }
 
 #feature-four .feature-content {
@@ -136,40 +159,6 @@ img {
 
 #main-footer a {
     color: #6C6F73;
-}
-
-@media screen and ( min-width: 700px){
-    #pricing .feature-content {
-    width: 100%;
-    padding-top: 7rem;
-    }
-
-    #pricing h1 {
-    padding-top: 3rem;
-    }
-
-    #pricing p.lead {
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-    margin-bottom: 2rem;
-    }
-
-
-    #pricing .card-text {
-    padding: 1rem 0;
-    }
-
-    #pricing .btn {
-    margin: 2rem 0;
-    }
-
-    #pricing .card {
-    padding-bottom: 0;
-    }
-
-    #pricing .card-block {
-    padding-bottom: 0;
-    }
 }
 
 @media screen and ( min-width: 991px) {
