--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -10,6 +10,9 @@
         <meta name="google-signin-client_id"
         content="19438371353-1gljfancidnfrtjdt2ic22hd3ib4fab0.apps.googleusercontent.com">
         <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
@@ -47,8 +50,11 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Blog</a>
                     </li>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Sign in</a>
+                        <a class="btn btn-primary" href="#">Sign up</a>
                     </li>
                 </ul>
             </div>
@@ -60,6 +66,29 @@
                 <h2 class="display-5">Easy planning for busy teachers</h2>
                 <p>Designed specfically for primary school teachers</p>
                 <a href="#pricing" class="btn btn-lg btn-success">Learn more</a>
+            </div>
+        </div>
+
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="loginModalLabel">Log in</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="g-signin2"
+                        data-longtitle="true"
+                        data-onsuccess="onSignIn"
+                        data-theme="light"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -147,7 +176,7 @@
                             </blockquote>
                         </div>
                         <div class="col-lg-6 d-none d-md-block">
-                            <img src="@routes.Assets.versioned("images/funnyPerson.jpg")" alt="">
+                            <img src="@routes.Assets.versioned("images/funnyPerson.jpeg")" alt="">
                         </div>
                     </div>
                 </div>
@@ -247,7 +276,7 @@
                             <div class="col-lg-12">
                                 <div class="card-columns">
                                     <div class="card">
-                                        <img class="card-img-top" src="@routes.Assets.versioned("../../public/images/takingPhoto.jpg")" alt="Card image cap">
+                                        <img class="card-img-top" src="@routes.Assets.versioned("images/takingPhoto.jpeg")" alt="Card image cap">
                                         <div class="card-body">
                                             <h4 class="card-title">Card title that wraps to a new line</h4>
                                             <p class="card-text">
@@ -265,7 +294,7 @@
                                         </blockquote>
                                     </div>
                                     <div class="card">
-                                        <img class="card-img-top" src="@routes.Assets.versioned("../../public/images/nightSkyPotrait.jpg")" alt="Card image cap">
+                                        <img class="card-img-top" src="@routes.Assets.versioned("images/nightSkyPotrait.jpg")" alt="Card image cap">
                                         <div class="card-body">
                                             <h4 class="card-title">Card title</h4>
                                             <p class="card-text">
@@ -294,7 +323,7 @@
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <img class="card-img" src="@routes.Assets.versioned("../../public/images/laptopCoffee.jpg")" alt="Card image">
+                                        <img class="card-img" src="@routes.Assets.versioned("images/laptopCoffee.jpg")" alt="Card image">
                                     </div>
                                     <div class="card p-3 text-right bg-warning text-light">
                                         <blockquote class="blockquote mb-0">
