--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -1,7 +1,9 @@
+@import be.objectify.deadbolt.scala.AuthenticatedRequest
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String])(content: Html)(implicit request: AuthenticatedRequest[Any])
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Time To Teach Login</title>
+        <title>@title</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,9 +19,14 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
     </head>
     <body>
+        <div class="d-none g-signin2" ></div>
+        <div id="mainAppTopMargin"></div>
+
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
+            aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
@@ -30,61 +37,35 @@
             <div class="collapse navbar-collapse" id="startupNavbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#feature-one">Features</a>
+                        <a class="nav-link" href="#feature-one">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#pricing">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#news">News</a>
+                        <a class="nav-link" href="#news">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#about">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Blog</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Sign up</a>
+                        @if(userFirstName.isDefined) {
+                            <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
+                        }else {
+                            <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                        }
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <section id="feature-three">
-            <div class="container">
-                <div class="row">
-                    <div class="feature-content">
-                        <div class="col-lg-6 d-none d-md-block">
-                            <img src="@routes.Assets.versioned("images/laptop.jpeg")" alt="">
-                        </div>
-                        <div class="col-lg-5 ml-auto">
-                            <h6>Log in</h6>
-                            <h2>Please log in to Time To Teach using a social network login.</h2>
-                            <p class="lead">
-                                Note that this allows you to have one less password to remember.
-                            </p>
-
-                            <div class="loginButtonGroup border border-secondary rounded" >
-                                <div class="d-flex justify-content-center loginButton">
-                                    <div class="g-signin2"
-                                    data-longtitle="true"
-                                    data-onsuccess="onSignIn"
-                                    data-theme="light"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        @content
 
         <footer id="main-footer">
             <div class="container">
@@ -124,7 +105,9 @@
                 </div>
             </div>
         </footer>
+
         @* ========================================================================================================*@
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
