--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -23,6 +23,11 @@ img {
     max-width: 100%;
 }
 
+.nav-login-button {
+    margin-left: 3rem;
+    margin-right: 0.5rem;
+}
+
 .blockquote {
     font-size: 1.6rem;
     color: #333;
@@ -149,6 +154,19 @@ img {
 
 #main-footer a {
     color: #6C6F73;
+}
+
+#loginSection {
+    padding: 8rem 0;
+    min-height: 100%;
+}
+
+.loginButton {
+    margin: 2rem 0;
+}
+
+#mainAppTopMargin {
+    margin-top: 4rem;
 }
 
 @media screen and ( min-width: 991px) {
