--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -54,7 +54,7 @@
                         <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Sign up</a>
+                        <a class="btn btn-primary" href="@routes.UserSignupController.signupStep1()">Sign up</a>
                     </li>
                 </ul>
             </div>
